--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+@font-face {
+    font-family: 'Logisoso';
+    src: url('/fonts/Logisoso.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
     --yellow: #ffcd47ff;
     --yellow-transparent: #ffce4775;
     --red: #ff6b6b;
     /* --red: rgba(255, 255, 255, 0.479); */
+    user-select: none;
 }
 
 body {
@@ -173,94 +181,158 @@ serial-device {
 .params-container {
     display: grid;
     grid-template-columns: 1fr min-content;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     column-gap: 10px;
 }
 
-.vout-container, .iout-container {
+.out-container {
     grid-column: 1;
     display: grid;
     grid-template-columns: 1fr min-content;
-    grid-template-rows: min-content min-content;
+    grid-template-rows: min-content 1fr min-content 1fr min-content 1fr min-content 1fr;
     grid-gap: 10px;
     align-items: baseline;
     border-right: 1px solid var(--yellow-transparent);
     padding-right: 10px;
 }
 
-.iout-container {
-    grid-row: 2;
+.out-value {
+    font-size: 28px;
+    font-family: 'Logisoso';
+    font-size: 48px;
+    text-align: end;
 }
 
-    .vout-container .vout-label, .iout-container .iout-label {
-        font-size: 18px;
-        opacity: 0.7;
-        grid-column: 1;
-        grid-row: 1;
-    }
+.out-label {
+    grid-column: 1;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--yellow-transparent);
+}
 
-    .vout-container .vout-value, .iout-container .iout-value {
-        font-size: 28px;
-        grid-column: 1;
-        grid-row: 2;
-        font-family: 'Logisoso';
-        font-size: 48px;
-        text-align: end;
-    }
+.out-mode {
+    grid-column: 2;
+    width: 20px;
+    height: 15px;
+    background-color: var(--yellow);
+    align-self: center;
+    color: black;
+    font-weight: bold;
+    font-size: 14px;
+    font-family: 'Logisoso';
+    text-align: center;
+    opacity: 0;
+}
 
-    .vout-container .vout-unit, .iout-container .iout-unit {
-        font-size: 18px;
-        opacity: 0.7;
-        grid-column: 2;
-        grid-row: 2;
-        font-weight: bold;
-    }
+.out-unit {
+    font-size: 18px;
+    opacity: 0.7;
+    font-weight: bold;
+    text-align: center;
+    grid-column: 2;
+}
 
 .set-container {
     grid-column: 2;
-    grid-row: span 2;
+    grid-row: span 3;
     display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content 1fr;
 }
 
-.vset-container {
+.set-label {
+    display: grid;
+    justify-content: center;
+}
+
+.set-label div {
+    font-weight: bold;
+    width: min-content;
+    font-size: 12px;
+    padding: 1px 3px;
+}
+
+.vset-label {
+}
+
+.iset-label div {
+}
+
+.iset-label {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.vset-container, .iset-container {
     display: grid;
     grid-template-columns: min-content min-content;
     position: relative;
+    margin-top: 4px;
+}
+
+.vset-ticks, .iset-ticks {
+    display: grid;
+    align-items: center;
+    justify-items: end;
+    align-content: space-between;
+    font-family: 'Logisoso';
+    color: var(--yellow-transparent);
+    padding-top: 7px;
+    padding-bottom: 4px;
 }
 
 .vset-ticks {
     grid-column: 1;
-    display: grid;
-    align-items: center;
-    justify-items: end;
-    font-family: 'Logisoso';
-    color: var(--yellow-transparent);
     margin-right: -20px;
-    padding-left: 12px;
+    padding-left: 14px;
 }
 
-.vslider {
+.iset-ticks {
     grid-column: 2;
+    margin-left: -23px;
+    padding-right: 24px;
+}
+
+.vert-slider {
+    grid-row: 1;
     appearance: none;
-    writing-mode: vertical-rl;
     background-color: transparent;
-    padding-left: 65px;
-    margin-left: -25px;
     cursor: row-resize;
 }
 
-.vslider::-webkit-slider-runnable-track {
+.vert-slider.left {
+    grid-column: 2;
+    padding-left: 65px;
+    margin-left: -25px;
+    writing-mode: vertical-rl;
+}
+
+.vert-slider.right {
+    grid-column: 1;
+    padding-right: 65px;
+    margin-right: -25px;
+    writing-mode: vertical-lr;
+}
+
+.vert-slider::-webkit-slider-runnable-track {
     width: 4px;
     background-color: var(--yellow-transparent);
     padding-top: 8px;
-    padding-bottom: 17px;
 }
 
-.vslider:hover::-webkit-slider-runnable-track {
+.vset-slider::-webkit-slider-runnable-track {
+    padding-bottom: 21px;
+}
+
+.iset-slider::-webkit-slider-runnable-track {
+    padding-bottom: 8px;
+}
+
+.vert-slider:hover::-webkit-slider-runnable-track {
     background-color: var(--yellow);
 }
 
-.vslider::-webkit-slider-thumb {
+.vert-slider::-webkit-slider-thumb {
     appearance: none;
     width: 20px;
     height: 10px;
@@ -276,15 +348,28 @@ serial-device {
     display: flex;
 }
 
+.range-value.right {
+    right: 0;
+}
+
 .range-value span {
     flex-grow: 1;
     line-height: 20px;
     border:1px solid black;
-    text-align: center;
     color: black;
     display: block;
     font-family: 'Logisoso';
     margin: 1px;
+}
+
+.range-value.left span {
+    text-align: right;
+    padding-right: 4px;
+}
+
+.range-value.right span {
+    text-align: left;
+    padding-left: 4px;
 }
 
 .range-value span:before {
@@ -292,14 +377,21 @@ serial-device {
     position: absolute;
     width: 13px;
     height: 1px;
-    left:calc(100% + 7px);
     top: calc(50% + 0.2px);
     background-color: black;
     margin-left: -5px;
     margin-top: -1px;
 }
 
-.measurements-5-ch {
+.range-value.left span:before {
+    right: -16px;
+}
+
+.range-value.right span:before {
+    left: -11px;
+}
+
+.states {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: min-content;
@@ -307,7 +399,7 @@ serial-device {
     border-top: 1px solid var(--yellow-transparent);
 }
 
-    .measurements-5-ch .measurement {
+    .states .state {
         padding-top: 6px;
         flex-grow: 1;
         border-right: 1px solid var(--yellow-transparent);
@@ -318,27 +410,35 @@ serial-device {
         align-content: space-evenly;
     }
 
-    .measurements-5-ch .measurement:last-child {
+    .states .state:last-child {
         border-right: none;
     }
 
-    .measurement-name {
-        font-size: 12px;
-        opacity: 0.7;
-        grid-column: 1;
-        grid-row: 1;
+    .state.active {
+        background-color: var(--yellow);
+        color: black;
     }
 
-@font-face {
-    font-family: 'Logisoso';
-    src: url('/fonts/Logisoso.ttf');
-    font-weight: normal;
-    font-style: normal;
-}
+    .state.active .state-name {
+        color: black;
+        opacity: 0.7;
+    }
 
-    .measurement-value {
+    .state-name {
+        font-size: 12px;
+        color: var(--yellow-transparent);
+        grid-column: 1;
+        grid-row: 1;
+        font-weight: bold;
+    }
+
+    .state-value {
         font-family: 'Logisoso';
         font-size: 28px;
         grid-column: span 2;
         grid-row: 2;
     }
+
+.relay-state, .output-state {
+    cursor: pointer;
+}
