--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,41 @@ serial-device {
     border: 1px solid var(--yellow);
     grid-gap: 10px;
     margin-right: 10px;
+    position: relative;
 }
+
+.alert-popup-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+    .alert-popup {
+        background-color: black;
+        color: var(--red);
+        font-family: 'Logisoso';
+        font-size: 28px;
+        padding: 20px;
+        position: relative;
+        border:none;
+        background-size: 7px 2px, 7px 2px, 2px 7px, 2px 7px;
+        background-position: 0 0, 0 100%, 0 0, 100% 0;
+        background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+        animation: marching-ants 0.5s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        background-image:   linear-gradient(to right, var(--red) 50%, transparent 50%),
+                            linear-gradient(to right, var(--red) 50%, transparent 50%),
+                            linear-gradient(to bottom, var(--red) 50%, transparent 50%),
+                            linear-gradient(to bottom, var(--red) 50%, transparent 50%);
+    }
     
     .device-row {
         display: grid;
